# CIPHER

./: .dockerignore  .env.example  .gitattributes  .gitignore  1.md  2.md  3.md  4.md  5.md  6.md  A.md  ARCHI.md  B.md  C.md  CIPHER_PROBLEM_STATEMENT.md  CIPHER_Training_BLUE_Colab.ipynb  CIPHER_Training_Colab.ipynb  CIPHER_Training_RunPod.py  CURSOR_MASTER_PROMPT_PHASE12.md  D.md  Dockerfile  E.md  F.md  G.md  HOW_TO_RUN.md  Hackathon FAQs (participants).docx  OpenEnv_Hackathon_Resources.docx  README.md  X.md  Z.md  [External] Meta OpenEnv Hackathon Participant Help Guide.docx  changed.md  check_submission.py  cipher-training-blue-v2.ipynb  cipher-training-blue-v2.py  cipher-training-red-v2.ipynb  cipher-training-red-v2.py  cipher_training_blue_v1.ipynb  cipher_training_red_v1.ipynb  cipher_training_v2_commander.ipynb  (+29 more)
.cursor/skills/compact/: SKILL.md
blue trained/cipher-blue-surveillance-v1/: adapter_model.safetensors
blue trained/cipher-blue-surveillance-v2/: adapter_config.json
blue trained/cipher-blue-threat-hunter-v1/: adapter_config.json  adapter_model.safetensors
cipher/: __init__.py  env_wrapper.py
cipher/agents/: __init__.py  base_agent.py  commander.py  role_profiles.py  subagent.py  subagent_registry.py
cipher/agents/blue/: __init__.py  deception_architect.py  forensics.py  forensics_analyzer.py  surveillance.py  threat_hunter.py
cipher/agents/oversight/: __init__.py  auditor.py  prompts.py
cipher/agents/prompts/: __init__.py  blue_alert_judge.txt  blue_anomaly_triager.txt  blue_commander.txt  blue_deception_architect.txt  blue_forensics.txt  blue_surveillance.txt  blue_threat_hunter.txt  oversight_oversight.txt  red_analyst.txt  red_commander.txt  red_dead_drop_courier.txt  red_exfiltrator.txt  red_operative.txt  red_planner.txt  red_scout.txt
cipher/agents/red/: __init__.py  analyst.py  coordination.py  exfiltrator.py  operative.py  planner.py
cipher/dashboard/: __init__.py  analytics.py  app.py  live.py  replay.py
cipher/dashboard/assets/: custom.css  dashboard.css
cipher/environment/: __init__.py  difficulty.py  emergent_evaluator.py  graph.py  graph_serializer.py  observation.py  scenario.py  state.py  traps.py
cipher/memory/: __init__.py  dead_drop.py
cipher/memory/drop_vault/: .gitkeep
cipher/rewards/: __init__.py  blue_reward.py  oversight_reward.py  red_reward.py  reward_logger.py
cipher/training/: __init__.py  _episode_runner.py  episode_memory.py  eval_runner.py  improvement_analyzer.py  loop.py  prompt_evolver.py
cipher/utils/: __init__.py  config.py  hf_uploader.py  llm_client.py  llm_mode.py  logger.py  lora_client.py  report_gen.py  storyteller.py  telemetry_db.py  video_gen.py
dashboard-react/: api_server.py  api_server_flask_backup.py  index.html  package-lock.json  package.json  vite.config.js
dashboard-react/src/: App.jsx
dashboard-react/src/components/: AgentMindPanel.jsx  AnalyticsPanel.jsx  ArchitecturePanel.jsx  BattleFeed.jsx  DrawerPanel.jsx  EpisodeHeader.jsx  EpisodeSelector.jsx  ExfilAlertOverlay.jsx  ForensicsPanel.jsx  (+14 more)
dashboard_exports/: replay_episode_001_20260421_131527.html  replay_episode_001_20260421_131551.html  replay_episode_005_20260424_172815_live_20260424_151125.html
data/finetune/: failure_cases.jsonl  success_cases.jsonl
drop_vault/: coordination.json
eval_results/: comparison_20260424_204914.csv  comparison_20260424_204914.json  comparison_20260425_005700.csv  comparison_20260425_005700.json  proof_of_learning_20260424_204914.md  proof_of_learning_20260425_005700.md
logs/: agent_status.json
red trained/cipher-red-analyst-v1/: adapter_config.json  adapter_model.safetensors
red trained/cipher-red-planner/: adapter_config.json
red trained/cipher-red-planner-v1/: adapter_model.safetensors
red trained/cipher-red-planner-v3/: README.md  adapter_config.json
server/: __init__.py  app.py  cipher_http_env.py
tests/: __init__.py  test_arch_v2_smoke.py  test_commander.py  test_env.py  test_phase10.py  test_phase13.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8_openenv.py  test_phase9.py  test_subagent_registry.py
tools/: flask_to_starlette_api.py
(+8 files in other folders)
